# quill-pipeline

./: .gitignore  pyproject.toml
config/: auditor.yaml.example  default.yaml.example  editor.yaml.example  models.yaml.example
eval_set_v0/: anchors.yaml  characters.yaml  genre_markers.yaml  template_genre.yaml
prompts/: CHANGELOG.md
scripts/: capture_d47_request.py  capture_d47_request_v2.py  compare_injection.py  d47_capture_ch28.py  d47_forensic_p6_13a.py  dry_run_editor.py  fix_existing_artifacts.py  fix_existing_ch1.py  gen_d42_table.py  generate_baseline.py  generate_post_c.py  generate_post_injection.py  llm_connectivity_check.py  mirror_sync.sh  p60pre2_validate.py  p60pre_validate.py  p6_2_generate_template_variant.py  p6_2_render_block.py  p6_2_run_ab.py  p6_humanity_compare.py  p6_humanity_generate_variant.py  p6_humanity_rescore_baseline.py  replay_d47_cheap_gate.py  replay_d47_fixed_parser.py  run_comparison.py  run_p60.py  run_p60_r2.py  run_p61a_architect.py  run_p61a_editor_only.py  run_p61a_writer_editor.py  run_post_c_measure.py  run_targeted_phase2.py  validate_eval_set.py
tests/: baseline_raw.json  model_eval.py  model_eval_v2.py  pipeline_lab.py  test_ai_traits.py  test_ai_traits_cli.py  test_anchor_checker.py  test_audit_state.py  test_auditor_anchor_check.py  test_auditor_chapter_ending.py  test_auditor_character_naming.py  test_auditor_character_presence.py  test_auditor_dedup.py  test_auditor_dialogue_ratio.py  test_auditor_meta_vocab.py  test_auditor_punctuation_density.py  test_auditor_style_repeat.py  test_auditor_transition.py  (+30 more)
(+490 files in other folders)
