[project]
name = "biyu"
version = "0.1.0"
description = "笔驭 - 专为中文网文连载设计的AI创作伙伴"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]
rag = ["chromadb>=0.5.0"]

[project.scripts]
biyu = "biyu.cli.main:app"

[tool.pytest.ini_options]
# 编辑态装包位(quill-pipeline)与开发源(biyu/src)分离:
# 测试优先吃本地 src/, 保证 TDD 看见刚写的代码, 不吃旧装包。
pythonpath = ["src"]
